--- a/flows_and_derivations.tex
+++ b/flows_and_derivations.tex
@@ -272,7 +272,7 @@ we sometimes want to single out only some of the interaction or cut instances. W
 \TODO{Alessio: The bound on the size of the $\ai$-decomposed form is clearly not tight. Is it ok?}
 %----------------------------------------------
 \begin{theorem}\label{theorem:aiDecomposedForm}
-Given a derivation $\Phi$, an $\ai$-decomposed form of\/ $\Phi$ whose size depends at most cubicly on the size of $\Phi$ can be constructed.
+Given a derivation $\Phi$, an $\ai$-decomposed form of\/ $\Phi$ whose size depends at most cubically on the size of $\Phi$ can be constructed.
 \end{theorem}
 \begin{proof}
 Using Lemma~\vref{lemma:SuperSwitch} apply, from top-to-bottom and left-to-right, the following transformations to each of the identity and cut instances in $\Phi$:
@@ -318,7 +318,7 @@ Using Lemma~\vref{lemma:SuperSwitch} apply, from top-to-bottom and left-to-right
  }
 }\quad
 \]
-to obtain an $\ai$-decomposed form of $\Phi$. The size of the $\ai$-decomposed form obtained in this way depends at most cubicly on the size of $\Phi$, since, by Lemma~\vref{lemma:SuperSwitch}, each of the transformations increase the size of the derivation at most quadratically and the number of transformations is bound by the size of $\Phi$.
+to obtain an $\ai$-decomposed form of $\Phi$. The size of the $\ai$-decomposed form obtained in this way depends at most cubically on the size of $\Phi$, since, by Lemma~\vref{lemma:SuperSwitch}, each of the transformations increase the size of the derivation at most quadratically and the number of transformations is bound by the size of $\Phi$.
 \end{proof}
 
 \begin{remark}\label{remakr:aiDecomposedFormUnique}
