--- a/global_transformations/path_breaker.tex
+++ b/global_transformations/path_breaker.tex
@@ -239,15 +239,23 @@ $}
 
 %-------------------------------------
 \begin{lemma}\label{lemma:PathBreaker}
-Given two atomic flows $\phi$ and $\psi$, such that $\phi\to_\frpb\psi$, and given an interaction (resp., cut) vertex $\nu$ in $\psi$, let $f_1$, $f_2$, $f_3$, $g_1$, $g_2$ and $g_3$ be the isomorphisms described in Definition~\ref{definition:PathBreaker}, then there is an interaction (resp., cut) vertex $\nu'$ in $\phi$ such that, for some $1\le i\le 3$, $\nu=f_i(\nu')$ or $\nu=g_i(\nu')$; and
+Given two atomic flows $\phi$ and $\psi$, such that $\phi\to_\frpb\psi$; let $f_1$, $f_2$, $f_3$, $g_1$, $g_2$ and $g_3$ be the isomorphisms, and let $\nu_\ai$ be the evidenced cut (resp., interaction) vertex described in Definition~\ref{definition:PathBreaker}; then, given an interaction (resp., cut) vertex $\nu$ in $\psi$, there is an interaction (resp., cut) vertex $\nu'$ in $\phi$ such that, for some $1\le i\le 3$, $\nu=f_i(\nu')$ or $\nu=g_i(\nu')$; and
 \begin{itemize}
 \item if there is a path from $\nu$ to $\bot$ (resp., $\top$) in $\psi$, then there is a path from $\nu'$ to $\bot$ (resp., $\top$) in $\phi$; and
-\item if there is a cut (resp., interaction) vertex $\hat\nu$ in $\psi$, such that there is a path from $\nu$ to $\hat\nu$ in $\psi$, then there is a cut (resp., interaction) vertex $\hat\nu'$ in $\phi$, such that, for some $1\le i\le 3$, $\hat\nu=f_i(\nu')$ or $\hat\nu=g_i(\nu')$, or $\hat\nu'$ is the evidenced cut (resp., identity) vertex in Definition~\ref{definition:IsolatedSubflowRemoval}, and there is a path from $\nu'$ to $\hat\nu'$ in $\phi$.
+\item if there is a cut (resp., interaction) vertex $\hat\nu$ in $\psi$, such that there is a path from $\nu$ to $\hat\nu$ in $\psi$, then there is a cut (resp., interaction) vertex $\hat\nu'$ in $\phi$, such that, for some $1\le i\le 3$, $\hat\nu=f_i(\nu')$ or $\hat\nu=g_i(\nu')$, or $\hat\nu'=\nu_\ai$; and there is a path from $\nu'$ to $\hat\nu'$ in $\phi$.
 \end{itemize}
 \end{lemma}
 
 \begin{proof}
-By a case analysis on the atomic flows in Definition~\vref{definition:PathBreaker}.
+In the following we refer to the figure in Definition~\ref{definition:PathBreaker}:
+\begin{itemize}
+ \item any path from $\nu$ to $\top$ (resp., $\bot$) in $\psi$ must contain an edge $\epsilon$, such that, for some upper (resp., lower) edge $\epsilon'$ of $\phi$ and some $1\le i\le 3$, $f_i(\epsilon')=\epsilon$ or $g_i(\epsilon')=\epsilon$. Hence, there is a path from $\nu'$ to $\top$ (resp., $\bot$) in $\phi$; and
+ \item we have to consider two cases:
+ \begin{itemize}
+  \item for some $1\le i\le 3$, $\nu=f_i(\nu')$ and $\hat\nu=f_i(\hat\nu')$, or $\nu=g_i(\nu')$ and $\hat\nu=g_i(\hat\nu')$, then there is a path from $\nu'$ to $\hat\nu'$ in $\phi$; or
+  \item $\nu=g_1(\nu')$ and $\hat\nu=g_2(\hat\nu')$, or $\nu=f_2(\nu')$ and $\hat\nu=f_3(\hat\nu')$ (resp., $\nu=g_2(\nu')$ and $\hat\nu=g_1(\hat\nu')$, or $\nu=f_3(\nu')$ and $\hat\nu=f_2(\hat\nu')$),then there is a path from $\nu'$ to $\nu_\ai$ in $\phi$.
+ \end{itemize}
+\end{itemize}
 \end{proof}
 %----------
 
