Defined the restricton of an atomic flow to an atom

--- a/flows_and_derivations.tex
+++ b/flows_and_derivations.tex
@@ -184,6 +184,9 @@ where $h\ge0$ (this can possibly be done in many different ways). By the inducti
 whose flow is $\phi$.
 \end{proof}
 
+\begin{definition}\label{definiton:FlowRestriction}
+Given a derivation $\Phi$ with atomic flow $\phi$, and an atom $a$, the \emph{restriction of $\phi$ to $a$} is the largest subflow $\phi_a$ of $\phi$, such that every edge of $\phi_a$ is mapped to from $a$ or $\bar a$.
+\end{definition}
 
 \section{Normal Forms of Derivations}\label{section:DerNormalForm}
 
