Fixed path lemmata

--- a/global_transformations/isolated_subflow.tex
+++ b/global_transformations/isolated_subflow.tex
@@ -136,8 +136,9 @@ We know that the size of $\Phi_\ttt$ and the size of $\Phi_\fff$ depend at most 
 
 %-------------------------------------
 \begin{lemma}\label{lemma:IsolatedSubflowRemovalPaths}
-Given two atomic flows $\phi$ and $\psi$, such that $\phi\to_\fris\psi$; let $f_1$ and $f_2$ be the isomorphisms and let $\nu_\ai$ be the evidenced cut (resp., interaction) vertex described in Definition~\ref{definition:IsolatedSubflowRemoval}; then, given an interaction (resp., cut) vertex $\nu$ in $\psi$, there is an interaction (resp., cut) vertex $\nu'$ in $\phi$ such that $\nu=f_1(\nu')$ or $\nu=f_2(\nu')$; and
+Given two atomic flows $\phi$ and $\psi$, such that $\phi\to_\fris\psi$; let $f_1$ and $f_2$ be the isomorphisms and let $\nu_\ai$ be the evidenced cut (resp., interaction) vertex described in Definition~\ref{definition:IsolatedSubflowRemoval}; then, given an interaction (resp., cut) vertex $\nu$ in $\psi$, there is an interaction (resp., cut) vertex $\nu'$ in $\phi$, such that
 \begin{itemize}
+\item $\nu=f_1(\nu')$ or $\nu=f_2(\nu')$;
 \item if there is a path from $\nu$ to $\bot$ (resp., $\top$) in $\psi$, then there is a path from $\nu'$ to $\bot$ (resp., $\top$) in $\phi$; and
 \item if there is a cut (resp., interaction) vertex $\hat\nu$ in $\psi$, such that there is a path from $\nu$ to $\hat\nu$ in $\psi$, then there is a cut (resp., interaction) vertex $\hat\nu'$ in $\phi$, such that $\hat\nu=f_1(\nu')$ or $\hat\nu=f_2(\nu')$, or $\hat\nu'=\nu_\ai$; and there is a path from $\nu'$ to $\hat\nu'$ in $\phi$.
 \end{itemize}
@@ -146,6 +147,7 @@ Given two atomic flows $\phi$ and $\psi$, such that $\phi\to_\fris\psi$; let $f_
 \begin{proof}
 In the following we refer to the figure in Definition~\ref{definition:IsolatedSubflowRemoval}:
 \begin{itemize}
+ \item by definition;
  \item any path from $\nu$ to $\top$ (resp., $\bot$) in $\psi$ must contain an edge $\epsilon$, such that, for some upper (resp., lower) edge $\epsilon'$ of $\phi$, $f_1(\epsilon')=\epsilon$ or $f_2(\epsilon')=\epsilon$. Hence, there is a path from $\nu'$ to $\top$ (resp., $\bot$) in $\phi$; and
  \item we have to consider two cases:
  \begin{itemize}
