Named the flows in the definitions of the operators

--- a/global_transformations/isolated_subflow.tex
+++ b/global_transformations/isolated_subflow.tex
@@ -212,6 +212,7 @@ The \emph{Isolated Subflow Remover}, $\ISR$, is an operator whose arguments are 
 \]
 and atomic flow
 \[
+\phi''\;=\;
 \atomicflow{
 (-8, 6)*{\afvjdm4{\boldsymbol\epsilon}{}};
 ( 1, 8)*{\afaidmex{}{}{}{}{}{}{6}{4}};
@@ -286,9 +287,9 @@ where $\psi'$ is the juxtaposition of all the isolated subflows mapped to from o
 \]
 with atomic flow
 \[
-%\psi'\;=\;
+\psi''\;=\;
 \atomicflow{
-(-8, 11)*{\afvjdm{14}{\boldsymbol\epsilon}{}};
+(-8, 11.5)*{\afvjdm{15}{\boldsymbol\epsilon}{}};
 ( 4, 18)*{\afaidex{}{}{}{}{}{}{12}{4}};
 %-
 (-2, 10)*{\affr68};
@@ -314,13 +315,13 @@ with atomic flow
 (10,-10)*{\copy\contrdown};
 %-
 ( 4,-18)*{\afaiuex{}{}{}{}{}{}{12}{4}};
-(-8,-11)*{\afvjum{14}{\boldsymbol\iota}{}};
+(-8,-11.5)*{\afvjum{15}{\boldsymbol\iota}{}};
 }\quad.
 \]
 
 \TODO{Alessio: is this clearer?}
 
-We then define $\ISR(\Phi,a)$ to be such that $\Psi'\to_\fris\ISR(\Phi,a)$, where $\phi$ in $\psi$ are the flows shown in Definition~\vref{definition:IsolatedSubflowRemoval}.
+We then define $\ISR(\Phi,a)$ to be such that $\Psi\to_\fris\ISR(\Phi,a)$, where $\phi$ and $\psi$ are the flows, by the same names, shown in Definition~\vref{definition:IsolatedSubflowRemoval}.
 \end{definition}
 %---------------
 
