--- a/global_transformations/isolated_subflow.tex
+++ b/global_transformations/isolated_subflow.tex
@@ -346,10 +346,14 @@ Given an atom $a$, and a derivation $\Phi$ that is on simple form with respect t
 \TODO{Alessio said: `\emph{This should be OK despite a possible mistake in 6.1.11. In fact, I think it would be better to justify point 2 by something else than (whatever becomes of) Lemma 6.1.11. The reason is that independent copies are made of the flows of b's, and then they are joined by (co)contractions. (Right?)}'.}
 
 \begin{proof}
-The statements follow by
+Let $\phi$, $\psi$, $\phi'$, $\psi'$, $\phi''$ and $\psi''$ be the atomic flows given in Definition~\ref{definition:IsolatedSubflowRemover}, then
 \begin{enumerate}
-\item Let $\phi$ and $\psi$ be the atomic flows given in Definition~\ref{definition:IsolatedSubflowRemover}, it follows that there is no path in $\phi$ from an interaction to a cut vertex whose edges are mapped to from $a$. By Lemma~\vref{lemma:IsolatedSubflowRemovalPaths}, we know that if there is a path from an interaction to a cut vertex in the atomic flow of $\ISR(\Phi,a)$ whose edges are mapped to from $a$, then there must be a path from an interaction to a cut vertex in $\phi$ whose edges are mapped to from $a$. Hence, the statement follows by contradiction;
-\item Definitions~\ref{definition:DerStreamlined} and \ref{definition:DerSimpleForm}, and Lemma~\ref{lemma:IsolatedSubflowRemovalPaths};
+\item by definition there is no path in $\phi$ from an interaction to a cut vertex whose edges are mapped to from $a$. By Lemma~\vref{lemma:IsolatedSubflowRemovalPaths}, we know that if there is a path from an interaction to a cut vertex in the atomic flow of $\ISR(\Phi,a)$ whose edges are mapped to from $a$, then there must be a path from an interaction to a cut vertex in $\phi$ whose edges are mapped to from $a$. Hence, the statement follows by contradiction;
+\item 
+\begin{itemize}
+ \item if there is a path from an interaction (resp., cut) vertex in the atomic flow of $\ISR(\Phi,a)$ whose edges are mapped to from $b$, then, by Lemma~\vref{lemma:IsolatedSubflowRemovalPaths}, there is a path from an interaction (resp., cut) vertex in $\phi$, so also in $\phi'$, whose edges are mapped to from $b$. Hence, the statement follows by contradiction; and
+ \item if there is an interaction (reps., cut) vertex $\nu$ and a cut (resp., interaction) vertex $\hat\nu$ in the atomic flow of $\ISR(\Phi,a)$ such that there is a path from $\nu$ to $\hat\nu$ and a path from $\nu$ to $\bot$ (resp., $\top$), both of whose edges are mapped to from $b$, then, by Lemma~\vref{lemma:IsolatedSubflowRemovalPaths}, there is an interaction (reps., cut) vertex $\nu'$ and a cut (resp., interaction) vertex $\hat\nu'$ in $\psi''$ such that there is a path from $\nu$ to $\hat\nu$ and a path from $\nu$ to $\bot$ (resp., $\top$), both of whose edges are mapped to from $b$. Furthermore, since we can assume that $b$ is not $a$ or $\bar a$, the $\psi''$ restricted to $b$ equals $\phi''$ restricted to $b$. Hence, the statement follows by contradiction.
+\end{itemize}
 \item Theorem~\vref{theorem:SoundIsolatedSubflowRemoval}.
 \end{enumerate}
 \end{proof}
