--- a/transformations.tex
+++ b/transformations.tex
@@ -2,6 +2,8 @@
 
 \TODO{Polarity assignment: `to' -> `for'}
 
+\TODO{Define `redex' and `contractum'.}
+
 %-------------------------------------------------
 \begin{definition}\label{definition:FlowReduction}
 An (\emph{atomic-flow}) \emph{reduction $R$} is a binary relation on the set of atomic flows, such that $\phi\mathrel{R}\psi$ if
