--- a/global_transformations/isolated_subflow.tex
+++ b/global_transformations/isolated_subflow.tex
@@ -349,12 +349,12 @@ Given an atom $a$, and a derivation $\Phi$ that is on simple form with respect t
 Let $\phi$, $\psi$, $\phi'$, $\psi'$, $\phi''$ and $\psi''$ be the atomic flows given in Definition~\ref{definition:IsolatedSubflowRemover}, then
 \begin{enumerate}
 \item by definition there is no path in $\phi$ from an interaction to a cut vertex whose edges are mapped to from $a$. By Lemma~\vref{lemma:IsolatedSubflowRemovalPaths}, we know that if there is a path from an interaction to a cut vertex in the atomic flow of $\ISR(\Phi,a)$ whose edges are mapped to from $a$, then there must be a path from an interaction to a cut vertex in $\phi$ whose edges are mapped to from $a$. Hence, the statement follows by contradiction;
-\item 
+\item
 \begin{itemize}
  \item if there is a path from an interaction (resp., cut) vertex in the atomic flow of $\ISR(\Phi,a)$ whose edges are mapped to from $b$, then, by Lemma~\vref{lemma:IsolatedSubflowRemovalPaths}, there is a path from an interaction (resp., cut) vertex in $\phi$, so also in $\phi'$, whose edges are mapped to from $b$. Hence, the statement follows by contradiction; and
- \item if there is an interaction (reps., cut) vertex $\nu$ and a cut (resp., interaction) vertex $\hat\nu$ in the atomic flow of $\ISR(\Phi,a)$ such that there is a path from $\nu$ to $\hat\nu$ and a path from $\nu$ to $\bot$ (resp., $\top$), both of whose edges are mapped to from $b$, then, by Lemma~\vref{lemma:IsolatedSubflowRemovalPaths}, there is an interaction (reps., cut) vertex $\nu'$ and a cut (resp., interaction) vertex $\hat\nu'$ in $\psi''$ such that there is a path from $\nu$ to $\hat\nu$ and a path from $\nu$ to $\bot$ (resp., $\top$), both of whose edges are mapped to from $b$. Furthermore, since we can assume that $b$ is not $a$ or $\bar a$, the $\psi''$ restricted to $b$ equals $\phi''$ restricted to $b$. Hence, the statement follows by contradiction.
+ \item if there is an interaction (reps., cut) vertex $\nu$ and a cut (resp., interaction) vertex $\hat\nu$ in the atomic flow of $\ISR(\Phi,a)$ such that there is a path from $\nu$ to $\hat\nu$ and a path from $\nu$ to $\bot$ (resp., $\top$), both of whose edges are mapped to from $b$, then, by Lemma~\vref{lemma:IsolatedSubflowRemovalPaths}, there is an interaction (reps., cut) vertex $\nu'$ and a cut (resp., interaction) vertex $\hat\nu'$ in $\phi$ such that there is a path from $\nu$ to $\hat\nu$ and a path from $\nu$ to $\bot$ (resp., $\top$), both of whose edges are mapped to from $b$. Furthermore, since we can assume that $b$ is not $a$ or $\bar a$, $\phi$ restricted to $b$ equals $\phi'$ restricted to $b$. Hence, the statement follows by contradiction.
 \end{itemize}
-\item Theorem~\vref{theorem:SoundIsolatedSubflowRemoval}.
+\item the statement follows by Theorem~\vref{theorem:SoundIsolatedSubflowRemoval}.
 \end{enumerate}
 \end{proof}
 %----------
