--- a/global_transformations/isolated_subflow.tex
+++ b/global_transformations/isolated_subflow.tex
@@ -161,9 +161,8 @@ In the following we refer to the figure in Definition~\ref{definition:IsolatedSu
 %------------------------------
 \newcommand{\ISR}{\mathsf{ISR}}
 \begin{definition}\label{definition:IsolatedSubflowRemover}
-The \emph{Isolated Subflow Remover}, $\ISR$, is an operator whose arguments are an atom $a$, and a derivation that is on simple form with respect to $a$, with $\ai$-decomposed form
+The \emph{Isolated Subflow Remover}, $\ISR$, is an operator whose arguments are an atom $a$, and a derivation $\Phi$ that is in simple form, but is not weakly streamlined, with respect to $a$, with $\ai$-decomposed form
 \[
-\Phi\;=\;
 \vlder{\Phi'}{}
 {
  \vlsbr
@@ -331,7 +330,7 @@ We then define $\ISR(\Phi,a)$ to be such that $\Psi\to_\fris\ISR(\Phi,a)$, where
 
 %------------------------------------------------------------
 \begin{proposition}\label{proposition:IsolatedSubflowRemover}
-Given an atom $a$, and a derivation $\Phi$ that is on simple form with respect to $a$,
+Given an atom $a$, and a derivation $\Phi$ that is in simple form, but is not weakly streamlined, with respect to $a$,
 \begin{enumerate}
 \item $\ISR(\Phi,a)$ is weakly streamlined with respect to $a$;
 \item for any atom $b$,
