Fixed propositions about operators

--- a/global_transformations/isolated_subflow.tex
+++ b/global_transformations/isolated_subflow.tex
@@ -338,7 +338,7 @@ Given an atom $a$, and a derivation $\Phi$ that is in simple form, but is not we
 \item if $\Phi$ is weakly streamlined with respect to $b$, then $\ISR(\Phi,a)$ is weakly streamlined with respect to $b$, and
 \item if $b$ is not the dual of $a$ and $\Phi$ is on simple form with respect to $b$, then $\ISR(\Phi,a)$ is on simple form with respect to $b$; and
 \end{itemize}
-\item the size of\/ $\ISR(\Phi,a)$ depends cubically on the size of\/ $\Phi$.
+\item the size of\/ $\ISR(\Phi,a)$ depends at most cubically on the size of\/ $\Phi$.
 \end{enumerate}
 \end{proposition}
 
